--- a/Session12ex7.html
+++ b/Session12ex7.html
@@ -20,48 +20,46 @@
             margin: 0;
         }
 
-        .card-title {
+        .card-img-overlay h2{
+            width: 100%;
+            color: white;
             position: absolute;
-            top: 65%;
-            left: 55%;
-            transform: translate(-50%, -50%);
-            font-size: 2rem;
-            text-align: center;
-            margin-left: -80px;
+            bottom: 20%;
+        
         }
 
     
     </style>
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container mt-5 ">
         <h4 class="mb-3">Rikkei cards</h4>
         <div class="row g-3">
-            <div class="col-md-4">
-                <div class="card text-white bg-dark text-align">
+            <div class="col-md-4 ">
+                <div class="card text-white bg-dark ">
                     <img src="https://vcdn1-thethao.vnecdn.net/2022/12/19/fkscvpyvqaa1fv9-jfif-167139012-9444-5939-1671391905.jpg?w=0&h=0&q=100&dpr=2&fit=crop&s=3hRZ0Szr15s7C7xncexxuw" class="card-img" alt="moon">
                     <div class="card-img-overlay">
-                        <h5 class="card-title ">Short title, long jacket</h5>
+                        <h2 class="card-title ">Short title, long jacket</h2>
                         <p class="card-text"><small><ion-icon name="golf-outline"></ion-icon> Earth | <ion-icon name="calendar-outline"></ion-icon> 3d</small></p>
                         <p class="card-left"><small><ion-icon name="logo-github"></ion-icon></small></p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 ">
                 <div class="card text-white bg-success ">
                     <img src="https://vcdn1-thethao.vnecdn.net/2022/12/19/fkscvpyvqaa1fv9-jfif-167139012-9444-5939-1671391905.jpg?w=0&h=0&q=100&dpr=2&fit=crop&s=3hRZ0Szr15s7C7xncexxuw" class="card-img" alt="flower">
                     <div class="card-img-overlay">
-                        <h5 class="card-title ">Much longer title that wraps to multiple lines</h5>
+                        <h2 class="card-title ">Much longer title that wraps to multiple lines</h2>
                         <p class="card-text"><small><ion-icon name="golf-outline"></ion-icon> Pakistan | <ion-icon name="calendar-outline"></ion-icon> 4d</small></p>
                         <p class="card-left"><small><ion-icon name="logo-github"></ion-icon></small></p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 ">
                 <div class="card text-white bg-primary">
                     <img src="https://vcdn1-thethao.vnecdn.net/2022/12/19/fkscvpyvqaa1fv9-jfif-167139012-9444-5939-1671391905.jpg?w=0&h=0&q=100&dpr=2&fit=crop&s=3hRZ0Szr15s7C7xncexxuw" class="card-img" alt="jellyfish">
                     <div class="card-img-overlay">
-                        <h5 class="card-title">Another longer title belongs here</h5>
+                        <h2 class="card-title">Another longer title belongs here</h2>
                         <p class="card-text"><small><ion-icon name="golf-outline"></ion-icon> California | <ion-icon name="calendar-outline"></ion-icon> 5d</small></p>
                         <p class="card-left"><small><ion-icon name="logo-github"></ion-icon></small></p>
                     </div>
